style: fixes for currency and the new squib islands button not being legible. changed the color on both

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -472,7 +472,13 @@ nav {
 
 .dailies-mobile {
     display: none;
+    color: white !important;
 }
+
+.currency-container-mobile-view {
+    color: white !important;
+}
+
 
 
 @media (max-width: 767px) {
